--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
   "background_color": "transparent",
   "related_applications": [],
   "prefer_related_applications": false,
+  "gcm_sender_id": "103953800507",
   "icons": [{
       "src": "images/platform/windows10/Square71x71Logo.scale-400.png",
       "type": "image/png",
